--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
       <div class="row">
           <div class="col-md-8">
               <h2>Featured Mars Image</h2>
-              <img src="{{mars.featured_image | default('static/images/error.png', true) }}" alt="Mars">
+              <img src="{{mars.featured_image }}" alt="Mars">
           </div>
           <div class="col-lg-4">
               <h3>Current Weather on Mars</h3>
